Fixed the issue with contributors section on mobile devices

--- a/src/pages/Homepage/sections/Contributors/Contributors.style.css
+++ b/src/pages/Homepage/sections/Contributors/Contributors.style.css
@@ -51,8 +51,6 @@
 .contributors-container .contributor-row {
     width: 100%;
     display: flex;
-    align-items: center;
-
 }
 
 .contributors-container .contributor-row-scroll {
